@@ -114,7 +114,24 @@ setMethod(
     }
 )
 
-
+#' @rdname subset
+#' @aliases removeUnassigned
+#' @details \code{removeUnassigned} removes all samples that are unclustered
+#'   (i.e. -1 or -2 assignment) in the designated cluster of \code{object} (so
+#'   they may be unclustered in other clusters found in
+#'   \code{clusterMatrix(object)}).
+#' @return The function \code{removeUnassigned} returns a
+#'   \code{ClusterExperiment} object with the unassigned samples removed.
+#' @export
+setMethod(
+  f = "removeUnassigned",
+  signature = "ClusterExperiment",
+  definition = function(object,whichCluster="primary") {
+    whCl<-getSingleClusterIndex(object,whichCluster)
+		cl<-clusterMatrix(object)[,whCl]
+		return(object[,which(cl>= 0)])
+  }
+)
 
 #' @details \code{removeClusters} creates a new cluster that unassigns samples
 #'   in cluster \code{clustersToRemove} (in the clustering defined by
